--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="site-header">
       <nav class="container site-header-content">
-        <a class="logo" href="./index.html"
+        <a class="logo top-icon" href="./index.html"
           >Web <span class="logo-header">Studio</span></a
         >
         <ul class="list site-nav">
@@ -42,7 +42,7 @@
       <!--Заказ услуг-->
       <section class="header">
         <h1 class="header-title">
-          Эффективные решения для вашего бизнеса
+          Эффективные решения</br> для вашего бизнеса
         </h1>
         <form>
           <button class="button" type="button">Заказать услугу</button>
@@ -54,12 +54,14 @@
           <h2 class="function">Функции</h2>
           <ul class="features">
             <li class="features-list">
-              <img
-                class="features-logo"
-                src="./img/antenna1.png"
-                alt="антенна"
-                width="70"
-              />
+              <div class="function-logo">
+                <img
+                  class="features-logo"
+                  src="./img/antenna1.png"
+                  alt="антенна"
+                  width="70"
+                />
+              </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="features-item">
                 Идейные соображения, а также начало повседневной работы по
@@ -67,12 +69,14 @@
               </p>
             </li>
             <li class="features-list">
-              <img
-                class="features-logo"
-                src="./img/clock1.svg"
-                alt="часы"
-                width="70"
-              />
+              <div class="function-logo">
+                <img
+                  class="features-logo"
+                  src="./img/clock1.svg"
+                  alt="часы"
+                  width="70"
+                />
+              </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="features-item">
                 Задача организации, в особенности же рамки и место обучения
@@ -80,12 +84,14 @@
               </p>
             </li>
             <li class="features-list">
-              <img
-                class="features-logo"
-                src="./img/diagram1.svg"
-                alt="диаграмма"
-                width="70"
-              />
+              <div class="function-logo">
+                <img
+                  class="features-logo"
+                  src="./img/diagram1.svg"
+                  alt="диаграмма"
+                  width="70"
+                />
+              </div>
               <h3 class="title">Планирование</h3>
               <p class="features-item">
                 Равным образом консультация с широким активом в значительной
@@ -93,12 +99,14 @@
               </p>
             </li>
             <li class="features-list">
-              <img
-                class="features-logo"
-                src="./img/Group.svg"
-                alt="космонафт"
-                width="70"
-              />
+              <div class="function-logo">
+                <img
+                  class="features-logo"
+                  src="./img/Group.svg"
+                  alt="космонафт"
+                  width="70"
+                />
+              </div>
               <h3 class="title">Современные технологии</h3>
               <p class="features-item">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -140,48 +148,68 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="our-team">
             <li class="team-member">
-              <img src="./img/img(1).jpg" alt="Николай Кучеренко" width="270" />
-              <h3 class="team-list">Николай Кучеренко</h3>
-              <p class="profession">Product designer</p>
-              <ul class="social-link">
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Twitter</a></li>
-                <li><a href="">Facebook</a></li>
-                <li><a href="">LinkedIn</a></li>
-              </ul>
+              <div class="team-card">
+                <img
+                  src="./img/img(1).jpg"
+                  alt="Николай Кучеренко"
+                  width="270"
+                />
+                <div class="team-info">
+                  <h3 class="team-list">Николай Кучеренко</h3>
+                  <p class="profession">Product designer</p>
+                  <ul class="social-link">
+                    <li><a href="">Inst</a></li>
+                    <li><a href="">Twitter</a></li>
+                    <li><a href="">Fb</a></li>
+                    <li><a href="">LinkedIn</a></li>
+                  </ul>
+                </div>
+              </div>
             </li>
             <li class="team-member">
-              <img src="./img/img(2).jpg" alt="Ольга Иванова" width="270" />
-              <h3 class="team-list">Ольга Иванова</h3>
-              <p class="profession">Frontend developer</p>
-              <ul class="social-link">
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Twitter</a></li>
-                <li><a href="">Facebook</a></li>
-                <li><a href="">LinkedIn</a></li>
-              </ul>
+              <div class="team-card">
+                <img src="./img/img(2).jpg" alt="Ольга Иванова" width="270" />
+                <div class="team-info">
+                  <h3 class="team-list">Ольга Иванова</h3>
+                  <p class="profession">Frontend developer</p>
+                  <ul class="social-link">
+                    <li><a href="">Inst</a></li>
+                    <li><a href="">Twitter</a></li>
+                    <li><a href="">Fb</a></li>
+                    <li><a href="">LinkedIn</a></li>
+                  </ul>
+                </div>
+              </div>
             </li>
             <li class="team-member">
-              <img src="./img/img(3).jpg" alt="Андрей Шевченко" width="270" />
-              <h3 class="team-list">Андрей Шевченко</h3>
-              <p class="profession">Marketing</p>
-              <ul class="social-link">
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Twitter</a></li>
-                <li><a href="">Facebook</a></li>
-                <li><a href="">LinkedIn</a></li>
-              </ul>
+              <div class="team-card">
+                <img src="./img/img(3).jpg" alt="Андрей Шевченко" width="270" />
+                <div class="team-info">
+                  <h3 class="team-list">Андрей Шевченко</h3>
+                  <p class="profession">Marketing</p>
+                  <ul class="social-link">
+                    <li><a href="">Inst</a></li>
+                    <li><a href="">Twitter</a></li>
+                    <li><a href="">Fb</a></li>
+                    <li><a href="">LinkedIn</a></li>
+                  </ul>
+                </div>
+              </div>
             </li>
             <li class="team-member">
-              <img src="./img/img(4).jpg" alt="Иван Николаев" />
-              <h3 class="team-list">Иван Николаев</h3>
-              <p class="profession">UI Designer</p>
-              <ul class="social-link">
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Twitter</a></li>
-                <li><a href="">Facebook</a></li>
-                <li><a href="">LinkedIn</a></li>
-              </ul>
+              <div class="team-card">
+                <img src="./img/img(4).jpg" alt="Иван Николаев" />
+                <div class="team-info">
+                  <h3 class="team-list">Иван Николаев</h3>
+                  <p class="profession">UI Designer</p>
+                  <ul class="social-link">
+                    <li><a href="">Inst</a></li>
+                    <li><a href="">Twitter</a></li>
+                    <li><a href="">Fb</a></li>
+                    <li><a href="">LinkedIn</a></li>
+                  </ul>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
@@ -205,7 +233,7 @@
       <div class="container">
         <div class="footer-container">
           <div class="address-container">
-            <a class="logo footer" href="./index.html"
+            <a class="logo" href="./index.html"
               >Web <span class="logo-footer">Studio</span></a
             >
             <address class="address-list">
@@ -219,9 +247,9 @@
           <div class="subscribe">
             <p class="footer-item">присоединяйтесь</p>
             <ul class="social-link">
-              <li><a href="">Instagram</a></li>
+              <li><a href="">Inst</a></li>
               <li><a href="">Twitter</a></li>
-              <li><a href="">Facebook</a></li>
+              <li><a href="">Fb</a></li>
               <li><a href="">LinkedIn</a></li>
             </ul>
           </div>
