--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
   <body>
     <header class="site-header">
       <nav class="container site-header-content">
-        <a class="logo" href="./index.html"
+        <a class="logo top-icon" href="./index.html"
           >Web <span class="logo-header">Studio</span></a
         >
         <ul class="list site-nav">
@@ -53,109 +53,127 @@
             <li class="project-list">
               <a class="project-link" href="">
                 <img src="./img/project1.jpg" alt="our people" />
-                <h2 class="project-item">Технокряк</h2>
-                <p class="project-type">Веб-сайт</p>
-                <p>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                <div class="project-discription">
+                  <h2 class="project-item">Технокряк</h2>
+                  <p class="project-type">Веб-сайт</p>
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
               </a>
             </li>
             <li class="project-list">
               <a class="project-link" href="">
                 <img src="./img/project2.jpg" alt="basketball duel" />
-                <h2 class="project-item">Постер New Orlean vs Golden Star</h2>
-                <p class="project-type">Дизайн</p>
-                <p>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                <div class="project-discription">
+                  <h2 class="project-item">Постер New Orlean vs Golden Star</h2>
+                  <p class="project-type">Дизайн</p>
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
               </a>
             </li>
             <li class="project-list">
               <a class="project-link" href="">
                 <img src="./img/project3.jpg" alt="restaurant logo" />
-                <h2 class="project-item">Ресторан Seafood</h2>
-                <p class="project-type">Приложение</p>
-                <p>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                <div class="project-discription">
+                  <h2 class="project-item">Ресторан Seafood</h2>
+                  <p class="project-type">Приложение</p>
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
               </a>
             </li>
             <li class="project-list">
               <a class="project-link" href="">
                 <img src="./img/project4.jpg" alt="headphones" />
-                <h2 class="project-item">Проект Prime</h2>
-                <p class="project-type">Маркетинг</p>
-                <p>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                <div class="project-discription">
+                  <h2 class="project-item">Проект Prime</h2>
+                  <p class="project-type">Маркетинг</p>
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
               </a>
             </li>
             <li class="project-list">
               <a class="project-link" href="">
                 <img src="./img/project5.jpg" alt="two boxes" />
-                <h2 class="project-item">Проект Boxes</h2>
-                <p class="project-type">Приложение</p>
-                <p>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                <div class="project-discription">
+                  <h2 class="project-item">Проект Boxes</h2>
+                  <p class="project-type">Приложение</p>
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
               </a>
             </li>
             <li class="project-list">
               <a class="project-link" href="">
                 <img src="./img/project6.jpg" alt="monitor apple" />
-                <h2 class="project-item">Inspiration has no Borders</h2>
-                <p class="project-type">Веб-сайт</p>
-                <p>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                <div class="project-discription">
+                  <h2 class="project-item">Inspiration has no Borders</h2>
+                  <p class="project-type">Веб-сайт</p>
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
               </a>
             </li>
             <li class="project-list">
               <a class="project-link" href="">
                 <img src="./img/project7.jpg" alt="book" />
-                <h2 class="project-item">Издание Limited Edition</h2>
-                <p class="project-type">Дизайн</p>
-                <p>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                <div class="project-discription">
+                  <h2 class="project-item">Издание Limited Edition</h2>
+                  <p class="project-type">Дизайн</p>
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
               </a>
             </li>
             <li class="project-list">
               <a class="project-link" href="">
                 <img src="./img/project8.jpg" alt="label" />
-                <h2 class="project-item">Проект LAB</h2>
-                <p class="project-type">Маркетинг</p>
-                <p>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                <div class="project-discription">
+                  <h2 class="project-item">Проект LAB</h2>
+                  <p class="project-type">Маркетинг</p>
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
               </a>
             </li>
             <li class="project-list">
               <a class="project-link" href="">
                 <img src="./img/project9.jpg" alt="laptop" />
-                <h2 class="project-item">Growing Business</h2>
-                <p class="project-type">Приложение</p>
-                <p>
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
+                <div class="project-discription">
+                  <h2 class="project-item">Growing Business</h2>
+                  <p class="project-type">Приложение</p>
+                  <p>
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
               </a>
             </li>
           </ul>
@@ -166,7 +184,7 @@
       <div class="container">
         <div class="footer-container">
           <div class="address-container">
-            <a class="logo footer" href="./index.html"
+            <a class="logo" href="./index.html"
               >Web <span class="logo-footer">Studio</span></a
             >
             <address class="address-list">
@@ -180,9 +198,9 @@
           <div class="subscribe">
             <p class="footer-item">присоединяйтесь</p>
             <ul class="social-link">
-              <li><a href="">Instagram</a></li>
+              <li><a href="">Inst</a></li>
               <li><a href="">Twitter</a></li>
-              <li><a href="">Facebook</a></li>
+              <li><a href="">Fb</a></li>
               <li><a href="">LinkedIn</a></li>
             </ul>
           </div>
