--- a/portfolio.html
+++ b/portfolio.html
@@ -52,127 +52,145 @@
           <ul class="projects-scroll">
             <li class="project-list">
               <a class="project-link" href="">
-                <img src="./img/project1.jpg" alt="our people" />
+                <div>
+                  <img src="./img/project1.jpg" alt="our people" />
+                  <p class="project-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="project-discription">
                   <h2 class="project-item">Технокряк</h2>
                   <p class="project-type">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <div>
+                  <img src="./img/project2.jpg" alt="basketball duel" />
                   <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
-            </li>
-            <li class="project-list">
-              <a class="project-link" href="">
-                <img src="./img/project2.jpg" alt="basketball duel" />
                 <div class="project-discription">
                   <h2 class="project-item">Постер New Orlean vs Golden Star</h2>
                   <p class="project-type">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <div>
+                  <img src="./img/project3.jpg" alt="restaurant logo" />
                   <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
-            </li>
-            <li class="project-list">
-              <a class="project-link" href="">
-                <img src="./img/project3.jpg" alt="restaurant logo" />
                 <div class="project-discription">
                   <h2 class="project-item">Ресторан Seafood</h2>
                   <p class="project-type">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <div>
+                  <img src="./img/project4.jpg" alt="headphones" />
                   <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
-            </li>
-            <li class="project-list">
-              <a class="project-link" href="">
-                <img src="./img/project4.jpg" alt="headphones" />
                 <div class="project-discription">
                   <h2 class="project-item">Проект Prime</h2>
                   <p class="project-type">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <div>
+                  <img src="./img/project5.jpg" alt="two boxes" />
                   <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
-            </li>
-            <li class="project-list">
-              <a class="project-link" href="">
-                <img src="./img/project5.jpg" alt="two boxes" />
                 <div class="project-discription">
                   <h2 class="project-item">Проект Boxes</h2>
                   <p class="project-type">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <div>
+                  <img src="./img/project6.jpg" alt="monitor apple" />
                   <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
-            </li>
-            <li class="project-list">
-              <a class="project-link" href="">
-                <img src="./img/project6.jpg" alt="monitor apple" />
                 <div class="project-discription">
                   <h2 class="project-item">Inspiration has no Borders</h2>
                   <p class="project-type">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <div>
+                  <img src="./img/project7.jpg" alt="book" />
                   <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
-            </li>
-            <li class="project-list">
-              <a class="project-link" href="">
-                <img src="./img/project7.jpg" alt="book" />
                 <div class="project-discription">
                   <h2 class="project-item">Издание Limited Edition</h2>
                   <p class="project-type">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <div>
+                  <img src="./img/project8.jpg" alt="label" />
                   <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
-            </li>
-            <li class="project-list">
-              <a class="project-link" href="">
-                <img src="./img/project8.jpg" alt="label" />
                 <div class="project-discription">
                   <h2 class="project-item">Проект LAB</h2>
                   <p class="project-type">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-list">
+              <a class="project-link" href="">
+                <div>
+                  <img src="./img/project9.jpg" alt="laptop" />
                   <p class="project-text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-              </a>
-            </li>
-            <li class="project-list">
-              <a class="project-link" href="">
-                <img src="./img/project9.jpg" alt="laptop" />
                 <div class="project-discription">
                   <h2 class="project-item">Growing Business</h2>
                   <p class="project-type">Приложение</p>
-                  <p class="project-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
                 </div>
               </a>
             </li>
